--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-in-viewport": "^1.0.0-alpha.29",
+    "react-intersection-observer": "^9.4.1",
     "react-medium-image-zoom": "^5.1.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
