--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.56.18",
+    "@react-three/fiber": "^8.11.0",
+    "@react-three/postprocessing": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@theatre/core": "^0.5.1",
+    "@theatre/r3f": "^0.5.1",
+    "@theatre/studio": "^0.5.1",
     "framer-motion": "^7.6.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
@@ -20,6 +26,7 @@
     "react-slideshow-image": "^4.0.5",
     "react-tooltip": "^5.7.0",
     "styled-components": "^5.3.6",
+    "three": "^0.149.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
