--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
+    "react-slick": "^0.29.0",
     "react-slideshow-image": "^4.0.5",
     "react-tooltip": "^5.7.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "three": "^0.149.0",
     "web-vitals": "^2.1.4"
