--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@theatre/r3f": "^0.5.1",
     "@theatre/studio": "^0.5.1",
     "framer-motion": "^7.6.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
